syntax = "proto3";

option go_package = "pkg/api/cloudslack";

package cloudslack;

message ConnectRequest {
  string instanceId = 1;
  string botId = 2;
}

message ConnectResponse {
  // event is the event received from slack slackevents.EventsAPIEvent
  bytes event = 1;
  // error is the error received from server
  bytes error = 2;
}

service CloudSlack {
  rpc Connect(stream ConnectRequest) returns (stream ConnectResponse) {}
}